force-app/main/default/objects/Position__c/fields/Position_Closed__c.field-meta.xml
<CustomField>
    <fullName>Position_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Position Closed</label>
    <type>Checkbox</type>
</CustomField>