force-app/main/default/objects/Position__c/fields/Position_Closed_Formula__c.field-meta.xml
<CustomField>
    <fullName>Position_Closed_Formula__c</fullName>
    <description>This is a formula field to be indexed in lieu of a checkbox</description>
    <formula>if(Position_Closed__c==true,&apos;Soft Deleted&apos;,&apos;Not Deleted&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Closed Formula</label>
    <type>Text</type>
</CustomField>