force-app/main/default/objects/Position__c/fields/Salary_Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Salary_Lower_Limit__c</fullName>
    <label>Salary Lower Limit</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>