force-app/main/default/objects/Position__c/fields/Salary_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Salary_Upper_Limit__c</fullName>
    <label>Salary Upper Limit</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>